# pyx_fevrier_2022

./: requirements.txt
corrections/administrationSysteme/IP/: ipPurPython.py
corrections/administrationSysteme/manipulationLogs/: apache.py
corrections/administrationSysteme/scraping/scrapingproject/scrapingproject/: middlewares.py
corrections/modules/regexp/: validationEmails.py
corrections/poo/: convertisseur.py  formation.py
corrections/syntaxe/: comparaisonTextesInternet.py  fizzBuzz.py  magic8ball.py  mesureTemps.py  slices.py
medias/modules/: generate_versions.py
tape_en_cours/: Jour 1.ipynb  Jour 2.ipynb  Jour 3.ipynb  ex1.py  ex1.py.ea04950fc0fa4a1f136d518ec68e7ae1.tmp  ex_poo.py  example_tk.py  log.txt  recovered.py  recovered_click.py  recovered_click.py.5c8512bc97f3fae35bc1a3300906a359.tmp  utils.py
tape_en_cours/.ipynb_checkpoints/: Jour 1-checkpoint.ipynb  Jour 2-checkpoint.ipynb  Jour 3-checkpoint.ipynb
tape_en_cours/exemple_installation/: setup.cfg
tape_en_cours/exemple_installation/recovered/: recovered.py  recovered_click.py
