[metadata]
name = recovered
version = 0.0.1
description = Mon packet

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = package.module:function